--- a/extension/src/pages/popup/index.html
+++ b/extension/src/pages/popup/index.html
@@ -6,7 +6,7 @@
 	</head>
 
 	<body>
-		<div id="app-container"></div>
+		<main id="app-container"></main>
 		<script type="module" src="./index.tsx"></script>
 	</body>
 </html>
